overlapping of content with kvp/info/comment bars solved with adjusting only transform function
Ticket: none

--- a/pub/System/FlatSkinPlugin/src/scss/qwiki/_infobar.scss
+++ b/pub/System/FlatSkinPlugin/src/scss/qwiki/_infobar.scss
@@ -36,13 +36,11 @@
       &.leftbar {
         @media #{$mobile-up} {
           transform: translate3d( $qw-leftbar-width-expanded, 0, 0 );
-          right: -55px;
         }
 
         @media #{$large-up} {
-          $offset: rem-calc($qw-leftbar-width-expanded) - 2 * $qw-content-padding;
+          $offset: rem-calc($qw-leftbar-width-expanded);
           transform: translate3d( $offset, 0, 0 );
-          right: -55px;
         }
       }
     }
